changed the color of the avatar instagram border

--- a/app/assets/stylesheets/influencers.scss
+++ b/app/assets/stylesheets/influencers.scss
@@ -44,7 +44,7 @@
 
 .gradient {
   background: #cc2366;
-  background: linear-gradient(100deg, #7492E7 0%,#7492E7 25%,#7492E7 50%,#cc2366 75%,#cc2366 100%);
+  background: linear-gradient(90deg, #7492E7 0%,#7492E7 25%,#D39298 50%,#D39298 75%,#D39298 100%);
   width: 80px;
   height: 80px;
   border-radius: 100px;
