--- a/app/views/influencers/index.html.erb
+++ b/app/views/influencers/index.html.erb
@@ -8,8 +8,10 @@
     <h1>Starred Influencers</h1>
     <% @influencers.each do |influencer| %>
       <div class="card">
-        <div class="gradient">
-          <img class="avatar" src="<%=influencer.instagram_img%>">
+        <div class="left-side">
+          <div class="gradient">
+            <img class="avatar" src="<%=influencer.instagram_img%>">
+          </div>
         </div>
         <div class="info">
           <div class="left">
@@ -27,6 +29,7 @@
             </div>
           </div>
         </div>
+        <button class="remove"><i class="fas fa-times"></i></button>
       </div>
     <% end %>
   </div>
